# ChangeLog for media-gfx/blender
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/ChangeLog,v 1.224 2012/04/13 19:28:35 ulm Exp $

  13 Apr 2012; Ulrich Müller <ulm@gentoo.org> blender-2.57-r1.ebuild,
  blender-2.60a.ebuild:
  Move EAPI assignment to top of ebuild, bug 411875.

  02 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> blender-2.49a.ebuild,
  blender-2.49b-r2.ebuild, blender-2.57-r1.ebuild, blender-2.60a.ebuild:
  Fix building with media-libs/openjpeg >= 1.5.0 wrt #409283. Every version has
  source/blender/imbuf/intern/jp2.c with parameters->tile_size_on set to false.

  23 Feb 2012; Kacper Kowalik <xarthisius@gentoo.org> blender-2.57-r1.ebuild,
  blender-2.60a.ebuild:
  Fix dependency on app-doc/doxygen wrt converting useflags 'nodot' to 'dot'.
  Fixes bug 405445 by Marien Zwart <marienz@gentoo.org>

  11 Feb 2012; Sebastian Pipping <sping@gentoo.org> blender-2.60a.ebuild,
  +files/blender-2.61-opencollada-debug.patch:
  Fix compilation for USE="debug collada", patch by Anthoine Bourgeois

  06 Feb 2012; Sebastian Pipping <sping@gentoo.org> blender-2.60a.ebuild,
  metadata.xml:
  Introduce support for 3D mouse based on dev-libs/libspnav (bug #390427),
  co-operation with Anthoine Bourgeois

  23 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> blender-2.57-r1.ebuild,
  blender-2.60a.ebuild:
  Use SLOT dependencies for lcms, libpng and tiff wrt #390397

  16 Jan 2012; Sebastian Pipping <sping@gentoo.org> blender-2.60a.ebuild,
  +files/blender-2.60a-collada.patch, metadata.xml:
  Enable support for collada based on just-packaged media-libs/opencollada (bug
  #390431)

  14 Nov 2011; Luca Barbato <lu_zero@gentoo.org>
  files/blender-2.60a-libav-0.7.patch:
  Rework the libav-0.7 support to copy the filename

  13 Nov 2011; Sebastian Pipping <sping@gentoo.org>
  files/blender-2.57-insecure.desktop, files/blender-2.60a-insecure.desktop: