@@ -45,27 +45,21 @@ DIST blender-2.49a.tar.gz 23039535 RMD160 f37100c7a02c75b622b8e055f32f06e064a62d
 DIST blender-2.49b.tar.gz 22918377 RMD160 5b641de7b41af5e4186c9721b66eddc6870f9fbc SHA1 43f71e7de4efe79c518d45f4b5a04e03c28d5fc5 SHA256 23554db4aa10b00e0e760a8bf9c4a9f749670d815c8bc874a04746adc4752488
 DIST blender-2.57.tar.gz 16806453 RMD160 d2f4d14cb08067a3d1fb3c1661772cf8f3a9bfaa SHA1 c539e2640dfa2a17e044d0f296219b866242112a SHA256 8bd1812166f2dd96e158c1898a666adc1f9f109765d5cd7ff3a8adeae60794b8
 DIST blender-2.60a.tar.gz 25679123 RMD160 74434c4e748872322386971cf6021255b0bfa1c8 SHA1 f23551e6ed661626c61de4a758d9ff67e0f27529 SHA256 7d788599ab46dac37f630dec026d06f7e3d73508f243eeb4ade8bcdcb661f124
-EBUILD blender-2.48a-r3.ebuild 4048 RMD160 d42df226483618027e08050b46fbe001b1383dce SHA1 e1201dcd28c70d294b320e1e81796b515778ec47 SHA256 e189a50467cbc68e7ea56c5a27c5bbd772c3918b0fe706c71da45fb7a14cb0ca
-EBUILD blender-2.49a.ebuild 4998 RMD160 4ee2f3cbf6d53b0e5c8061104896c3affab519d6 SHA1 ca7801ab0bb600a81f0a3d6e098f6a79be452ab1 SHA256 0a7382111d90e7d70719c67e0cfdce557814c3db8c4f909ec8bbc7c8a7afd781
-EBUILD blender-2.49b-r2.ebuild 5227 RMD160 c22fcfe4407523501e5c316f60d373d750542bd1 SHA1 afa550d2e8517f209c0f38d14f74397359b7933e SHA256 3561f848caf9fc25b8801ea85af822154b58f7b94fff23367b0a0f7b16b8c27b
+EBUILD blender-2.48a-r3.ebuild 4116 RMD160 0c2790ac77760b7d7ece41a7947246011f05fa9b SHA1 b286b4ff1cc44a8383de40b64fb10c5ac9caa43c SHA256 491ac88445db61cd51a3d8ef3387993a85a7f3d33846e5dfda1ca5d0fdb56ed6
+EBUILD blender-2.49a.ebuild 5066 RMD160 3518f0aa94a1360a4ec774480f80fff9bd0ecda0 SHA1 5e6dad8e9cd80e23171f874090a3199d139aee1f SHA256 64cca831b882fd527b53de22bfa137a859c6a5d89f6615b5e075aa916f0c43f0
+EBUILD blender-2.49b-r2.ebuild 5295 RMD160 776c53fbce7fc6cfcae58b7830906089ad03c10d SHA1 a33dd9729c2c1bf75805c2360ab5697432b4599f SHA256 fd61820a492e3e32875e998d9e310d3431e380d7ec88c9d20ac13adb48d66554
 EBUILD blender-2.57-r1.ebuild 14179 RMD160 f74e423ef538b7f2443fd38beaa623e281b381eb SHA1 1c6b0920facc35dc2603711e7208f82f21414a8e SHA256 3d479b13ce87170a085dbb46a9884d7e1eaefdc3c20e97efec865e480d555be0
 EBUILD blender-2.60a.ebuild 14352 RMD160 dbe25fdc6939189605e1b313f5c1098367c92bf9 SHA1 5f841651edd70eb38d3fcf5543afa063ab341b41 SHA256 b0c053c1fc01fe881b47610b8ce6fa755d524b56d92c812dd41fcf28e1699b11
-MISC ChangeLog 35033 RMD160 afa879e533aedfc1c8d4ab8d53237b0874d93053 SHA1 c59e88630023dee8c60b2fa1268f4bbadb1267ad SHA256 5a1f718759a42edded9353c21c73d4a5ff3cb2c18e8ec19a901101308d32c20d
+MISC ChangeLog 35216 RMD160 2a04635dda94dee79802fc3dea7371e5bccbb9dd SHA1 4934ce84bd02dd71e6c1e0e7dd71e3fe847609a6 SHA256 0e221690860c5b4a2e2cc0d1d91a6120b4f0b4e54cca6ff87391b49728b9f205
 MISC metadata.xml 1965 RMD160 3f48332ec841384161d2377ff0a2e02c37a4a909 SHA1 bf4dce385ef1e309b5d6ac4a8a631463587cf949 SHA256 ec5973923a2cce6ae374f6dfed03b15f401b1c9a05b1e8520440cdd5756a1c39
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPiH81AAoJEDxpGckxwJCBgm0QALwAhdAKxYBFVXjyFPr1izL7
-tEGVCwuPIvz2KEq/FgIQwujYoFq0IgmjiA/q/6Cy1ivb5SyVEw1laq2AEe8Pp3yU
-qOe337jS5ee12c/6kG90xNAYqL7DS+UCNLc3l/t8IVcTJ4IQ34BpqWB1kpj95JlI
-8Y/bPnKx5t+BBpvFkGJerdNLJW4zFrGyYaiB9dL+OPQzPMlZUmzSLhBfSrvplgF9
-AI/tI5OFc1H7RNIqwPQ3gxBtgkPirApwZWhutZXY0vPZiClivRblGx/GLuSEEIew
-fh8sQ2QDfYV5qSgLKCeKAt7lk/aU5/JvwFVIzpnM31cHn+7ZbeWJWEeZWrte4+f5
-zRqsQefoE9khqVPWLEDsSh/nHttoXxm8VR7vArrrDzMmYUdRTnXuz85fN0QDcprd
-b7AK/L1fsT/zvbazBpdJ3g/YlS5bAt6Xjz2xm/A+9s64Q1x3AbYS2Bz9q8BZCatp
-BNWgT3GDRq9Sg47XM7PEacqInLTbJpUw+SmclMU0jxYxOfax6DmdbcGWWN/fbIpw
-j1bipql5zRHdKyi39Ko3oXKwtL+6Orm+U4o+8E2EN+wcwFXrCzoKyBrz8/URBvB4
-BPymobxZersA83XctdiafykdLcl5+5LAsxGYh/HNghzfwAbw+nQGgXy3JNMTLCRX
-yVNEpJkf/mxHcN9VXwiE
-=JWBw
+iQEcBAEBAgAGBQJP2f/dAAoJEEdUh39IaPFNDh0H/0AI1LJKP37XX/cK8IZFwQ0q
+otHC9W34t0tdZ9ml2k91Je8SX3TBHxK8QDL7vxl5OhKtsUV4n5ndg2Df2cvlC903
+0uXszIULg2xCJY39qjsk9G8lxKJlpvskdLyWCNVy3iNuKNqBhlcU1ACcv9AiNvXT
+pDSz2m+MMtr+ajnnyq0J+X8Su8ikdMY8qJy6N1CMoAHxFC4OuKF0QSXiBxz9ZWZ8
+unguiQqux0SsUKV46HFeMFw7XBwnxOJeE0pi87Lm7bLIzBoDuLbUPaIhpbjk3vW2
+50ohwnomggkhDsH6ubLvd1w8mqa4gHU3S14BerzNdWUK+kIS5rNjUl25iq+5qJc=
+=81jx
 -----END PGP SIGNATURE-----
