@@ -1,8 +1,10 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/blender-2.48a-r3.ebuild,v 1.19 2012/04/02 13:34:47 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/blender-2.48a-r3.ebuild,v 1.20 2012/06/14 15:18:44 ssuominen Exp $
 
 EAPI=2
+
+PYTHON_DEPEND="2:2.6"
 
 inherit scons-utils multilib flag-o-matic eutils python
 
@@ -20,15 +22,14 @@ KEYWORDS="amd64 ppc ppc64 x86"
 RDEPEND=">=dev-libs/openssl-0.9.6
 	ffmpeg? ( virtual/ffmpeg )
 	jpeg? ( virtual/jpeg )
-	media-libs/tiff
-	>=dev-lang/python-2.4
+	media-libs/tiff:0
 	nls? ( >=media-libs/freetype-2.0
 			virtual/libintl
 			>=media-libs/ftgl-2.1 )
 	openal? ( >=media-libs/openal-1.6.372
 		>=media-libs/freealut-1.1.0-r1 )
 	openexr? ( media-libs/openexr )
-	png? ( media-libs/libpng )
+	png? ( media-libs/libpng:0 )
 	quicktime? ( media-libs/libquicktime )
 	>=media-libs/libsdl-1.2
 	blender-game? ( >=media-libs/libsdl-1.2[joystick] )
@@ -51,6 +52,11 @@ blend_with() {
 		echo "WITH_BF_${UWORD}=0" | tr '[:lower:]' '[:upper:]' \
 			>> "${S}"/user-config.py
 	fi
+}
+
+pkg_setup() {
+	python_set_active_version 2
+	python_pkg_setup
 }
 
 src_prepare() {
