@@ -1,8 +1,10 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/blender-2.49a.ebuild,v 1.19 2012/04/02 13:34:47 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/blender-2.49a.ebuild,v 1.20 2012/06/14 15:18:44 ssuominen Exp $
 
 EAPI=2
+
+PYTHON_DEPEND="2:2.6"
 
 inherit scons-utils multilib eutils python
 
@@ -18,15 +20,14 @@ KEYWORDS="amd64 ppc ppc64 x86"
 
 RDEPEND="ffmpeg? ( virtual/ffmpeg[encode,theora] )
 	>=media-libs/openjpeg-1.5.0
-	media-libs/tiff
-	>=dev-lang/python-2.5
+	media-libs/tiff:0
 	nls? ( >=media-libs/freetype-2.0
 		virtual/libintl
 		>=media-libs/ftgl-2.1 )
 	openal? ( >=media-libs/openal-1.6.372
 		>=media-libs/freealut-1.1.0-r1 )
 	media-libs/openexr
-	media-libs/libpng
+	media-libs/libpng:0
 	blender-game? ( >=media-libs/libsdl-1.2[joystick] )
 	>=media-libs/libsdl-1.2
 	ogg? ( media-libs/libogg )
@@ -49,6 +50,11 @@ blend_with() {
 		echo "WITH_BF_${UWORD}=0" | tr '[:lower:]' '[:upper:]' \
 			>> "${S}"/user-config.py
 	fi
+}
+
+pkg_setup() {
+	python_set_active_version 2
+	python_pkg_setup
 }
 
 src_prepare() {
