@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA1
 
 AUX jhead-2.90-mkstemp_respect_flags.patch 892 RMD160 58d2ed1537c14951a4b29be7d4d7e93c92473422 SHA1 c81ca81da5d5885f87ef20f39ed4d1281fc8f746 SHA256 ee4648d28e15e254a1de55341948084de0ca89aa95e59c1d466afdfe19eeead5
 DIST jhead-2.90.tar.gz 64390 RMD160 87e0480582377cccbd46f12626402d46136ac51b SHA1 f24a611d5c359b6c0a24184718ec983b9d0eb449 SHA256 d18f862349f6d65560de12510f5cc9068b65dda7394b13fdeb6155a4933e0de8
@@ -7,13 +7,13 @@ DIST jhead-2.94.tar.gz 64628 RMD160 7c974f668c8c55eb7378a6177c65ac35d49f5d35 SHA
 DIST jhead-2.95.tar.gz 64700 RMD160 343ee3d4333ce9c5d02263e778c535d0e9685053 SHA1 e66b0a64e034054185da3e6c5e1ac7afb36776f8 SHA256 e796504441c1febe95fc76a947589f1b5d5bbeee0a91f50ead45906961250e3d
 EBUILD jhead-2.90.ebuild 847 RMD160 6cfab0f09053ba4e306c9621facf4ae326b4eb7f SHA1 d1ac92ffdc7c595cdc7abe872ad9af89a013a861 SHA256 547baab95012f3559246bcddeb8a967704a5f66667a152f90a5437f673f4176d
 EBUILD jhead-2.94.ebuild 864 RMD160 3e559dbdf05161fc408a67128ddc41983fc22b49 SHA1 d3abcded693aa5f87d3ae04cbf36a530ccfddd3a SHA256 7024d93c8a0beee58514600d5638e18f7efa65c4049eaf259becbf82055f184b
-EBUILD jhead-2.95.ebuild 861 RMD160 a0ec98d21b55887102969b117efafbfd7372b4b6 SHA1 77097c14d0f9172550231def061b62c05fa27bab SHA256 e2c38c0103d9414c23c491c3d22cdc28d62fddaae5d1b364e1bb1de1920a3d24
-MISC ChangeLog 14463 RMD160 039cfb5f2d4ca49c11cb39694e6fbdaa7f609b67 SHA1 5fd6b4c1e599cca928aea26869e041594ded88e1 SHA256 854a564ba5aa03b0e12857c2b26cabfbddf29ece95353d0eb66b17d040a4bd05
+EBUILD jhead-2.95.ebuild 853 RMD160 a1e52578ad49595ce412cb6b7066daa52877b736 SHA1 2ffde897b98636db1ec60235642feb9baee820ee SHA256 3fb1680aa9fb327270d6cec09003edf88992156bfc1827534348e3cc3703783a
+MISC ChangeLog 14556 RMD160 00eada0acb221fa125ce426caa5789e5d96d2a10 SHA1 e6d085cf6b29a907116890944f80298a8936e9d3 SHA256 8d90e40dc3a25485a4fb3fa58025636324873c5af8c9052610f5578ed1c35fc3
 MISC metadata.xml 161 RMD160 60f70b15d67f0e6aafc59833b2f0a30e30b51765 SHA1 1c35398222ef7ed670c31965e42cca77fe4b1da6 SHA256 e8daadc5e27e3ef1148993b5b48d96e93bc36d798a1f416693f7f8c84be427e1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk/R5qwACgkQuUQtlDBCeQJvjQCdF7m63IbO2JDV5S4QQSaTFmG1
-LVAAn3PwK+R3ZM974MLekb03io1ZlVrf
-=B3ow
+iEYEARECAAYFAk/aASYACgkQVWmRsqeSphNjswCfUa9W4wgJ+djrJ6Agk8V+od0m
+/dAAn2uPy5iWJ9EZjJtGh6d5s0w+yiSZ
+=6yN6
 -----END PGP SIGNATURE-----
