@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/blender
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/ChangeLog,v 1.224 2012/04/13 19:28:35 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/blender/ChangeLog,v 1.225 2012/06/14 15:18:44 ssuominen Exp $
+
+  14 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> blender-2.48a-r3.ebuild,
+  blender-2.49a.ebuild, blender-2.49b-r2.ebuild:
+  Use dev-lang/python 2.x wrt #421089 by "lynx"
 
   13 Apr 2012; Ulrich Müller <ulm@gentoo.org> blender-2.57-r1.ebuild,
   blender-2.60a.ebuild:
